Changes on the models

--- a/BookingWebApplication/appsettings.json
+++ b/BookingWebApplication/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-05KKIM1;Database=booking_db;Trusted_Connection=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+  }
 }
